hotfix: fix smooth scroll and gap between cards

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -18,7 +18,7 @@
 
 html {
   font-size: 12px;
-  /* scroll-behavior: smooth; */
+  scroll-behavior: smooth;
 }
 
 body {
