--- a/src/components/Subscriptions/Subscriptions.module.css
+++ b/src/components/Subscriptions/Subscriptions.module.css
@@ -223,7 +223,7 @@
 
 @media (max-width: 768px) {
   .subscr {
-    padding: 6.6vw 0 9.2vw 0;
+    padding: 6.6vw 0 15vw 0;
   }
 
   .subscr::before {
@@ -240,7 +240,7 @@
   }
 
   .wrapper {
-    gap: 6.6vw;
+    gap: 8vw;
     margin-top: 9.5vw;
     flex-direction: column;
     align-items: center;
